syntax = "proto3";

option csharp_namespace = "VideoMicroservice.Protos";

import "google/protobuf/empty.proto";

package videogrpcservice;

service VideoGrpcService {
    // Upload a video
    rpc UploadVideo (UploadVideoRequest) returns (Video);
    // Get video details
    rpc GetVideoById (GetVideoByIdRequest) returns (GetVideoByIdResponse);
    // List videos
    rpc UpdateVideo (UpdateVideoRequest) returns (UpdateVideoResponse);
    // Delete video
    rpc DeleteVideo (DeleteVideoRequest) returns (DeleteVideoResponse);
    // List all videos
    rpc GetAllVideos (GetAllVideosRequest) returns (GetAllVideosResponse);
    // Check service health
    rpc CheckHealth (google.protobuf.Empty) returns (CheckHealthResponse);
}

// User data for Monitoring Service
message UserData {
    string id = 1;
    string email = 2;
    string role = 3;
}

message Video {
    string id = 1;
    string title = 2;
    string description = 3;
    int32 likes = 4;
    string genre = 5;
    bool is_deleted = 6;
}

message UploadVideoRequest {
    string title = 1;
    string description = 2;
    string genre = 3;
    UserData user_data = 4;
}

message GetVideoByIdRequest {
    string id = 1;
    UserData user_data = 2;
}

message GetVideoByIdResponse {
    string id = 1;
    string title = 2;
    string description = 3;
    int32 likes = 4;
    string genre = 5;
}

message UpdateVideoRequest {
    string id = 1;
    string title = 2;
    string description = 3;
    string genre = 4;
    UserData user_data = 5;
}

message UpdateVideoResponse {
    string title = 1;
    string description = 2;
    string genre = 3;
}

message DeleteVideoRequest {
    string id = 1;
    UserData user_data = 2;
}

message DeleteVideoResponse {}

message GetAllVideosRequest {
    string title = 1;
    string genre = 2;
    UserData user_data = 3;
}

message GetAllVideosResponse {
    repeated Video videos = 1;
}

message CheckHealthResponse {
    bool is_running = 1;
}